--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+  <div class="container"></div>
+      <div id="home" class="flex-center flexcolumn">
+        <h1>Code Quiz</h1>
+      </div>
 </body>
 </html>
