Quiz Question Section in HTML

--- a/index.html
+++ b/index.html
@@ -25,6 +25,16 @@
       </h4>
       <button id="startQuiz" class="start-quiz">Start Quiz</button>
     </div>
+
+    <!-- Quiz Questions -->
+    <div id="quizPrompts" class="quiz-prompts">
+      <div id="quizQuestions">Question</div>
+      <div id="quizAnswers" class="quiz-answers"></div>
+      <h4 id="quizTimer">Timer</h4>
+    </div>
+
+    <!-- Quiz Scoreboard -->
+    
   </div>
 </body>
 
