--- a/index.html
+++ b/index.html
@@ -21,10 +21,9 @@
         When the game is over you can save your initial score.
       </h4>
       <a href="quiz.html" class="button">Start Quiz</a>
-      <a href="highscores.html" id="highScoreButton" class="button">High Scores</a>
+      <a href="scoreBoard.html" id="highScoreButton" class="button">High Scores</a>
     </div>
   </div>
-  <script src="end.js"></script>
 </body>
 
 </html>
