--- a/end.html
+++ b/end.html
@@ -15,11 +15,13 @@
             <form class="end-form-container">
                 <h2 id="end-text">Enter Your Name to Save Your Score</h2>
                 <input type="text" name="name" id="winnerName" placeholder="Enter Name Here">
-                <button class="button" id="saveScoreButton" type="submit" onClick="saveHighScore(event)" disabled>Save</button>
+                <button class="button" id="saveScoreButton" type="submit" onclick="saveHighScore(event)"
+                    disabled>Save</button>
             </form>
-            <a href="game.html" class="button">Play Again</a>
+            <a href="quiz.html" class="button">Play Again</a>
         </div>
     </div>
+    <script src="end.js"></script>
 </body>
 
 </html>
