--- a/scoreBoard.html
+++ b/scoreBoard.html
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Score</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="scoreBoard.css.css">
+    <link rel="stylesheet" href="scoreBoard.css">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <div class="container">
+        <div id="highScores" class="flex-center flex-column">
+            <div id="finalScore">Score Board</div>
+            <ul id="highScoresList"></ul>
+            <a href="index.html" class="btn">Home</a>
+        </div>
+    </div>
+    <script src="scoreboard.js"></script>
 </body>
+
 </html>
