Added Timer And Fixed Local Storage

--- a/quiz.html
+++ b/quiz.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <h1 id="timer"></h1>
     <div class="container">
         <div id="quiz" class="justify-center flex-column">
             <div id="quizHud">
