--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         When the game is over you can save your initial score.
       </h4>
       <a href="quiz.html" class="button">Start Quiz</a>
-      <a href="scoreboard.html" id="highScoreButton" class="button">High Scores</a>
+      <a href="scoreBoard.html" id="highScoreButton" class="button">High Scores</a>
     </div>
   </div>
 </body>
