--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
   <div class="container">
     <div id="home" class="flex-column flex-center">
       <h1>Flex your coding knowledge by completing this quiz!</h1>
-      <h4 class="start-description">
-        When you click the start button then a timer starts and you are presented with a question.<br>
-        When you answer a question then you are presented with another question.<br>
-        When you answer a question incorrectly then time is subtracted from the clock.<br>
-        When all questions are answered or the timer reaches 0 then the game is over.<br>
-        When the game is over you can save your initial score.
-      </h4>
+      <ul class="start-description">
+        <li>When you click the start button then a timer starts and you are presented with a question.</li>
+        <li>When you answer a question then you are presented with another question.</li>
+        <li>When you answer a question incorrectly then time is subtracted from the clock.</li>
+        <li>When all questions are answered or the timer reaches 0 then the game is over.</li>
+        <li>When the game is over you can save your initial score.</li>
+      </ul>
       <a href="quiz.html" class="button">Start Quiz</a>
       <a href="scoreBoard.html" id="highScoreButton" class="button">High Scores</a>
     </div>
