--- a/quiz.html
+++ b/quiz.html
@@ -10,7 +10,6 @@
 </head>
 
 <body>
-    <h1 id="timer"></h1>
     <div class="container">
         <div id="quiz" class="justify-center flex-column">
             <div id="quizHud">
@@ -23,6 +22,10 @@
                     </div>
                 </div>
                 <div class="quiz-hud-section">
+                    <p class="quiz-hud-prefix">
+                        Time
+                    </p>
+                    <h1 id="timer"></h1>
                     <p class="quiz-hud-prefix">
                         Score
                     </p>
