--- a/scoreBoard.html
+++ b/scoreBoard.html
@@ -13,9 +13,9 @@
 <body>
     <div class="container">
         <div id="highScores" class="flex-center flex-column">
-            <div id="finalScore">Score Board</div>
+            <h1 id="finalScore">Score Board</h1>
             <ul id="highScoresList"></ul>
-            <a href="index.html" class="btn">Home</a>
+            <a href="index.html" class="button">Home</a>
         </div>
     </div>
     <script src="scoreboard.js"></script>
