--- a/end.html
+++ b/end.html
@@ -5,12 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Complete</title>
+    <title>Quiz Complete</title>
 </head>
 
 <body>
     <div class="container">
         <div id="end" class="flex-center flex-column">
+            <h1 id="finalScoreHeader">Score:</h1>
             <h1 id="finalScore">0</h1>
             <form class="end-form-container">
                 <h2 id="end-text">Enter Your Name to Save Your Score</h2>
